kubernetes/postgres/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: postgres
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    # Cloudflare API Ips
    # https://www.cloudflare.com/ips/
    - type: Allow
      to:
        cidrSelector: 104.16.0.0/13
    - type: Allow
      to:
        cidrSelector: 172.64.0.0/13
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
